# beanmachine

./: .gitattributes  .gitignore  .gitmodules  .pyre_configuration  404.html  CHANGELOG.md  CMakeLists.txt  CNAME  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  index.html  linear_regression_test.py  package-lock.json  pydoc-markdown.yml  pyproject.toml  setup.cfg  setup.py  sitemap.xml
src/: CMakeLists.txt
src/beanmachine/: __init__.py  minibm.py
src/beanmachine/applications/clara/: nmc.py  nmc_df.py
src/beanmachine/applications/hme/: __init__.py  abstract_linear_model.py  abstract_model.py  configs.py  interface.py  null_mixture_model.py  patsy_mixed.py  priors.py
src/beanmachine/applications/timeseries/: setup.py
src/beanmachine/contrib/: BM-VAE.ipynb  MeanFieldVI.ipynb  MultivariateMFVI.ipynb  conftest.py
src/beanmachine/contrib/abc/: abc_infer.py  abc_smc_infer.py  adaptive_abc_smc_infer.py
src/beanmachine/contrib/gp/: __init__.py  kernels.py  likelihoods.py  models.py
src/beanmachine/contrib/inference_compilation/: ic_infer.py
src/beanmachine/contrib/neutra/: iafflow.py  iaflayer.py  iafmcmc_infer.py  iafmcmc_proposer.py  maskedautoencoder.py  train.py
src/beanmachine/contrib/tests/: abc_infer_test.py  abc_smc_infer_test.py  adaptive_abc_smc_infer_test.py  inference_compilation_test.py
src/beanmachine/contrib/variable_elimination/: util.py  variable_elimination.py
src/beanmachine/graph/: README.md  cavi.cpp  cavi_test.py  double_matrix.cpp  double_matrix.h  gibbs.cpp  graph.cpp  graph.h  graph.pyi  graph_stats.cpp  graph_test.cpp  mh.cpp  mh.h  new_profiler.cpp  new_profiler.h  nmc.cpp  nmc.h  nmc_stepper.h  nmc_test.cpp  nmc_test.py  operator_test.py  out_nodes_reflexive_transitive_closure.cpp  out_nodes_reflexive_transitive_closure.h  perf_report.cpp  profiler.cpp  profiler.h  pybindings.cpp  pybindings.h  rejection.cpp  rejection_test.cpp  rw.cpp  support.cpp  support.h  testing_util.cpp  testing_util.h  to_dot.cpp  transformation.h  util.cpp  util.h
src/beanmachine/graph/distribution/: bernoulli.cpp  bernoulli.h  bernoulli_logit.cpp  bernoulli_logit.h  bernoulli_noisy_or.cpp  bernoulli_noisy_or.h  beta.cpp  beta.h  beta_test.cpp  bimixture.cpp  bimixture.h  binomial.cpp  binomial.h  categorical.cpp  categorical.h  cauchy.cpp  cauchy.h  dirichlet.cpp  dirichlet.h  distribution.cpp  distribution.h  distribution_test.cpp  dummy_marginal.cpp  dummy_marginal.h  flat.cpp  flat.h  gamma.cpp  gamma.h  geometric.cpp  geometric.h  half_cauchy.cpp  half_cauchy.h  half_normal.cpp  half_normal.h  lkj_cholesky.cpp  lkj_cholesky.h  log_normal.cpp  log_normal.h  multivariate_normal.cpp  multivariate_normal.h  (+11 more)
src/beanmachine/paic2/: CMakeLists.txt  README.md  environment.yml  setup_paic2.py
src/beanmachine/ppl/: README.md  __init__.py  conftest.py  main.py
tests/: CMakeLists.txt
tests/graph/: graph_stat_test.cpp  graph_test.cpp  graph_test.py  nmc_test.py  operator_test.py  profiler_test.cpp  support_test.cpp  testing_util_test.cpp  testing_util_test.h
tests/graph/distribution/: bernoulli_logit_test.cpp  beta_test.cpp  bimixture_test.cpp  binomial_test.cpp  categorical_test.cpp  cauchy_test.cpp  distribution_test.cpp  flat_test.cpp  gamma_test.cpp  half_cauchy_test.cpp  half_normal_test.cpp  lkj_cholesky_test.cpp  log_normal_test.cpp  multivariate_normal_test.cpp  poisson_test.cpp  product_test.cpp
tests/graph/global/: conjugate_util_test.cpp  global_state_test.cpp  hmc_mass_matrix_test.cpp  hmc_no_warmup_test.cpp  hmc_step_size_test.cpp  nuts_mass_matrix_test.cpp  nuts_matrix_test.cpp  nuts_multinomial_test.cpp  nuts_test.cpp  util_test.cpp
tests/graph/marginalization/: marginalization_extensional_test.cpp  marginalized_graph_test.cpp
tests/graph/operator/: gradient_test.cpp  operator_test.cpp
tests/ppl/: conftest.py  smoke_test.py
tests/ppl/compiler/: __init__.py  annotated_assignment_test.py  bernoulli_test.py  binary_vs_multiary_addition_perf_test.py  bm_graph_builder_test.py  bm_to_bmg_test.py  bmg_bad_models_test.py  bmg_factor_test.py  bmg_nodes_test.py  bmt_model_test.py  boolean_comparisons_test.py  broadcast_test.py  coin_flip_test.py  column_index_test.py  comparison_rewriting_test.py  dirichlet_test.py  distribution_half_normal_test.py  distribution_normal_test.py  error_report_test.py  fix_beta_bernoulli_alpha_rv_test.py  fix_beta_bernoulli_const_added_test.py  fix_beta_bernoulli_ops_test.py  fix_beta_binomial_basic_test.py  fix_binomial_logit_test.py  fix_if_test.py  fix_matrix_scale_test.py  fix_matrix_type_test.py  fix_normal_normal_basic_test.py  fix_observe_true_test.py  fix_problems_test.py  fix_vectorized_models_test.py  gaussian_mixture_model_test.py  gen_bm_python_test.py  gen_builder_test.py  gen_mini_test.py  gep_test.py  gmm_1d_2comp_test.py  graph_accumulation_test.py  item_test.py  jit_test.py  (+20 more)
tests/ppl/diagnostics/: diagnostics_test.py
tests/ppl/experimental/: torch_jit_backend_test.py
tests/ppl/inference/: compositional_infer_conjugate_test_nightly.py  compositional_infer_test.py  hypothesis_testing_nightly.py  inference_error_reporting_test.py  inference_integration_test_nightly.py  inference_test.py  monte_carlo_samples_test.py  nnc_test.py  predictive_test.py  sampler_test.py  single_site_ancestral_mh_conjugate_test_nightly.py  single_site_hamiltonian_monte_carlo_conjugate_test_nightly.py  single_site_newtonian_monte_carlo_conjugate_test_nightly.py  single_site_newtonian_monte_carlo_test.py  single_site_no_u_turn_conjugate_test_nightly.py  single_site_random_walk_adaptive_conjugate_test_nightly.py  single_site_random_walk_conjugate_test_nightly.py  single_site_random_walk_test.py  single_site_uniform_mh_conjugate_test_nightly.py  single_site_uniform_mh_test.py  utils_test.py  vi_test.py
tests/ppl/model/: statistical_model_test.py
tests/ppl/testlib/: abstract_conjugate.py  hypothesis_testing.py  hypothesis_testing_test.py
tests/ppl/utils/: equivalence_test.py  fixtures.py  memoize_test.py  multidictionary_test.py  treeprinter_test.py
tests/ppl/world/: utils_test.py
(+5636 files in other folders)
