[build-system]
# PEP 518: The minimum build requirement used in setup.py (before install depndencies)
requires = ["setuptools", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.usort]
first_party_detection=false
